NLA properties with drivers aren't displayed as having drivers #46163

Closed
opened 2015-09-19 11:01:01 +02:00 by Bubble Bobble · 10 comments

System Information
Windows 7, NVIDIA Quadro 1000m

Blender Version
Broken: 2.76 RC1 hash: c586e30
Worked: (unknown)

Short description of error
Values in the properties panel of the NLA editor that are assigned drivers do not become purple like other values that have been assigned drivers.

Exact steps for others to reproduce the error

  1. open this blend http://www.pasteall.org/blend/38104
  2. observe that most all entities in the properties panel of NLA editor are assigned drivers, yet none are signified with purple indicator that they have been assigned a driver
**System Information** Windows 7, NVIDIA Quadro 1000m **Blender Version** Broken: 2.76 RC1 hash: c586e30 Worked: (unknown) **Short description of error** Values in the properties panel of the NLA editor that are assigned drivers do not become purple like other values that have been assigned drivers. **Exact steps for others to reproduce the error** 1) open this blend http://www.pasteall.org/blend/38104 2) observe that most all entities in the properties panel of NLA editor are assigned drivers, yet none are signified with purple indicator that they have been assigned a driver
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @JimCantley

Added subscriber: @JimCantley

#46941 was marked as duplicate of this issue

#46941 was marked as duplicate of this issue

Added subscribers: @JoshuaLeung, @mont29

Added subscribers: @JoshuaLeung, @mont29
Joshua Leung was assigned by Bastien Montagne 2015-09-20 11:32:00 +02:00

Please always attach .blend file here: driver_display_error.blend

@JoshuaLeung are that kind of properties supposed to be animatable at all? This looks rather fishy to me, animating animation-control properties…

Please always attach .blend file here: [driver_display_error.blend](https://archive.blender.org/developer/F235690/driver_display_error.blend) @JoshuaLeung are that kind of properties supposed to be animatable at all? This looks rather fishy to me, animating animation-control properties…
Member

None of these particular properties should be able to be animated. Drivers won't work either, as they'll be evaluated far too late to actually be of any use at all.

None of these particular properties should be able to be animated. Drivers won't work either, as they'll be evaluated far too late to actually be of any use at all.
Author

My mistake Bastien, didn't know we could attach files here, thanks.

Joshua, I don't understand why these shouldn't be able to be animated. They seem to be able to be given drivers and it's very helpful. For example if you have two looping actions and want to sync the timing, you can add a driver to the scale of each action and adjust them together. In a file I was working on recently, I made the z-height of an empty able to control the scale of several different actions. Now I move the object up and down and it adjusts the scale of animation of all these actions together.

If this is not supposed to happen, I really don't want the ability to add drivers here removed. It's nice to be able to add drivers to these properties. I added drivers and noticed that they are not given purple indicators like other drivers, so figured I'd report it as a bug.

  • On thinking about this, I see now why we shouldn't be able to animate these. But controlling variables in these properties with a driver to link them all together seems very helpful. But I see how this is a bit odd... however I don't know any better ways to link values in such a way. If the solution is to use python and program it, that's kind of a shame because I don't know how to do that.

  • Or do I see why these shouldn't be able to be animated!??! These would be wild to animate :P They'll still be evaluated the same when reading through the blend, right? Flat value drivers seem to work at least but I can see how this whole thing is kinda screwy. Thanks either way, guys, but I think this is nice to have.

My mistake Bastien, didn't know we could attach files here, thanks. Joshua, I don't understand why these shouldn't be able to be animated. They seem to be able to be given drivers and it's very helpful. For example if you have two looping actions and want to sync the timing, you can add a driver to the scale of each action and adjust them together. In a file I was working on recently, I made the z-height of an empty able to control the scale of several different actions. Now I move the object up and down and it adjusts the scale of animation of all these actions together. If this is not supposed to happen, I really don't want the ability to add drivers here removed. It's nice to be able to add drivers to these properties. I added drivers and noticed that they are not given purple indicators like other drivers, so figured I'd report it as a bug. - On thinking about this, I see now why we shouldn't be able to animate these. But controlling variables in these properties with a driver to link them all together seems very helpful. But I see how this is a bit odd... however I don't know any better ways to link values in such a way. If the solution is to use python and program it, that's kind of a shame because I don't know how to do that. - Or do I see why these shouldn't be able to be animated!??! These would be wild to animate :P They'll still be evaluated the same when reading through the blend, right? Flat value drivers seem to work at least but I can see how this whole thing is kinda screwy. Thanks either way, guys, but I think this is nice to have.
Member

Added subscriber: @AndreOshiro

Added subscriber: @AndreOshiro

This issue was referenced by ae72a9206e

This issue was referenced by ae72a9206e988a3f4ef5d35393ce490b23db2629
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#46163
No description provided.