source/blender/blenkernel/BKE_nla.h
@@ -40,6 +40,9 @@ struct bAction;
 struct Scene;
 struct Speaker;
 
+struct PointerRNA;
+struct PropertyRNA;
+
 /* ----------------------------- */
 /* Data Management */
 
@@ -102,6 +105,8 @@ void BKE_nlastrip_validate_name(struct AnimData *adt, struct NlaStrip *strip);
 bool BKE_nlatrack_has_animated_strips(struct NlaTrack *nlt);
 bool BKE_nlatracks_have_animated_strips(ListBase *tracks);
 void BKE_nlastrip_validate_fcurves(struct NlaStrip *strip);
+
+bool BKE_nlastrip_has_curves_for_property(const struct PointerRNA *ptr, const struct PropertyRNA *prop);
 
 void BKE_nla_validate_state(struct AnimData *adt);
 
